@@ -1,18 +1,17 @@
 package com.erp.staffmanagement.staff_management.service;
 
-import com.erp.commonutil.jwt.JwtTokenProvider;
-import com.erp.commonutil.jwt.dto.JwtToken;
+import com.erp.commonutil.config.security.UserContext;
+import com.erp.staffmanagement.staff_management.dto.CertificateRequestDTO;
 import com.erp.staffmanagement.staff_management.dto.SaveCertificateReqDTO;
 import com.erp.staffmanagement.staff_management.dto.SaveCertificationResponseDTO;
 import com.erp.staffmanagement.staff_management.dto.StaffInfoDTO;
-import com.erp.staffmanagement.staff_management.dto.certificateRequestDTO;
 import com.erp.staffmanagement.staff_management.entity.Certificates;
-import com.erp.staffmanagement.staff_management.entity.Staff;
 import com.erp.staffmanagement.staff_management.repository.CertificateRepository;
 import com.erp.staffmanagement.staff_management.repository.StaffRepository;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -20,66 +19,54 @@ public class ManageStaffsService {
 
   private final StaffRepository staffRepository;
   private final CertificateRepository certificateRepository;
-  private final JwtTokenProvider jwtTokenProvider;
 
   public ManageStaffsService(StaffRepository staffRepository,
-      CertificateRepository certificateRepository, JwtTokenProvider jwtTokenProvider) {
+      CertificateRepository certificateRepository) {
     this.staffRepository = staffRepository;
-
     this.certificateRepository = certificateRepository;
-    this.jwtTokenProvider = jwtTokenProvider;
   }
 
-  public List<StaffInfoDTO> getAllStaffs() {
-    List<Staff> staffs = staffRepository.findAll();
-    return staffs.stream().map(StaffInfoDTO::new).toList();
+  public List<StaffInfoDTO> getStaffsForStatus(String status) throws Exception {
+    List<StaffInfoDTO> staffs = staffRepository.findAll().stream().map(StaffInfoDTO::new).toList();
+    return switch (status) {
+      case "all" -> staffs;
+      case "onDuty" ->
+          staffs.stream().filter(object -> "근무".equals(object.getWorkStatus())).collect(
+              Collectors.toList());
+      case "offDuty" ->
+          staffs.stream().filter(object -> "퇴사".equals(object.getWorkStatus())).collect(
+              Collectors.toList());
+      case "break" -> staffs.stream().filter(object -> "휴직".equals(object.getWorkStatus())).collect(
+          Collectors.toList());
+      case "waiting" ->
+          staffs.stream().filter(object -> "대기".equals(object.getWorkStatus())).collect(
+              Collectors.toList());
+      default -> throw new Exception("잘못된 요청입니다.");
+    };
   }
 
-  public List<StaffInfoDTO> getOnDutyStaffs() {
-    List<Staff> staffs = staffRepository.findAll();
-    List<StaffInfoDTO> result = staffs.stream().map(StaffInfoDTO::new).toList();
-    return result.stream().filter(object -> "근무".equals(object.getWorkStatus())).collect(
-        Collectors.toList());
+  public List<CertificateRequestDTO> getCertificates(Long staffId) throws Exception {
+    try {
+      List<Certificates> certificatesList = Optional.ofNullable(
+          certificateRepository.findCertificatesByStaffId(staffId)).orElse(List.of());
+      return certificatesList.stream().map(CertificateRequestDTO::new).toList();
+    } catch (Exception e) {
+      throw new Exception(e.getMessage());
+    }
   }
 
-  public List<StaffInfoDTO> getOffDutyStaffs() {
-    List<Staff> staffs = staffRepository.findAll();
-    List<StaffInfoDTO> result = staffs.stream().map(StaffInfoDTO::new).toList();
-    return result.stream().filter(object -> "퇴사".equals(object.getWorkStatus())).collect(
-        Collectors.toList());
-  }
+  public SaveCertificationResponseDTO saveCertService(SaveCertificateReqDTO saveCertificateReqDTO) {
+    try {
+      UserContext userContext = (UserContext) SecurityContextHolder.getContext().getAuthentication()
+          .getPrincipal();
 
-  public List<StaffInfoDTO> getBreakStaffs() {
-    List<Staff> staffs = staffRepository.findAll();
-    List<StaffInfoDTO> result = staffs.stream().map(StaffInfoDTO::new).toList();
-    return result.stream().filter(object -> "휴직".equals(object.getWorkStatus())).collect(
-        Collectors.toList());
-  }
+      Long managerId = userContext.getStaffId();
 
-  public List<StaffInfoDTO> getWaitingStaffs() {
-    List<Staff> staffs = staffRepository.findAll();
-    List<StaffInfoDTO> result = staffs.stream().map(StaffInfoDTO::new).toList();
-    return result.stream().filter(object -> "대기".equals(object.getWorkStatus())).collect(
-        Collectors.toList());
-  }
-
-
-  public List<certificateRequestDTO> getCertificates(Long staffId) {
-    List<Certificates> certificatesList = Optional.ofNullable(
-        certificateRepository.findCertificatesByStaffId(staffId)).orElse(List.of());
-    return certificatesList.stream().map(certificateRequestDTO::new).toList();
-  }
-
-
-  public SaveCertificationResponseDTO saveCertService(SaveCertificateReqDTO saveCertificateReqDTO,
-      JwtToken jwtToken) {
-
-    //Long managerId = jwtTokenProvider.getClaims(jwtToken.getAccessToken()).getStaffId();
-    String username = jwtTokenProvider.getUserContext(jwtToken.getAccessToken()).getUsername();
-
-
-    Certificates cert = certificateRepository.save(
-        new Certificates(saveCertificateReqDTO, username));
-    return new SaveCertificationResponseDTO(true, cert.getCertificatesId(), null);
+      Certificates cert = certificateRepository.save(
+          new Certificates(saveCertificateReqDTO, managerId));
+      return new SaveCertificationResponseDTO(true, cert.getCertificatesId(), null);
+    } catch (Exception e) {
+      return new SaveCertificationResponseDTO(false, null, e.getMessage());
+    }
   }
 }
